[tool.poetry]
name = "05-1-hw"
version = "0.1.0"
description = ""
authors = ["DSulzhits <dsulzhits@gmail.com>"]
readme = "README.md"
packages = [{include = "05_1_hw"}]

[tool.poetry.dependencies]
python = "^3.11"
psycopg2 = "^2.9.6"
python-dotenv = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
